# LoopKey

./: .gitignore  README.md  macro_config.json  main.py  pyproject.toml
.github/workflows/: build.yml  main.yml
